# fast_zero_studies

./: .dockerignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
src/fast_zero/: app.py  schemas.py
src/fast_zero/static/: batatinha.html
tests/: test_app.py  test_schemas.py
