[project]
name = 'fast-zero'
version = '0.1.0'
description = ''
authors = [
    {name = 'Davi Eduardo',email = 'davieduardocostadf@outlook.com'}
]
readme = 'README.md'
requires-python = '>=3.10,<4.0'
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = 'fast_zero', from = 'src'}]


[tool.poetry.group.dev.dependencies]
ruff = '^0.11.8'
pytest = '^8.3.5'
pytest-cov = '^6.1.1'
taskipy = '^1.14.1'

[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'

pre_test = 'task lint'
test = 'pytest --cov=src/fast_zero -vv'
post_test = 'coverage html'

format = 'ruff check --fix . && ruff format .'
run = 'fastapi dev src/fast_zero/app.py --host 0.0.0.0 --port 8000'